// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`render skill claude-rich → claude: canonical 1`] = `
"---
name: claude-rich
description: >-
  Test fixture exercising Claude-only frontmatter and $ARGUMENTS body
  substitution.
argument-hint: '[issue-number]'
disable-model-invocation: true
allowed-tools: Bash(git *) Read
disallowed-tools:
  - WebSearch
  - Agent
---

Fix GitHub issue $ARGUMENTS following the project's coding standards.

1. Read the issue description.
2. Implement the fix.
3. Add tests.
"
`;

exports[`render skill claude-rich → claude: warnings 1`] = `[]`;

exports[`render skill claude-rich → claude: resources 1`] = `[]`;

exports[`render skill claude-rich → opencode: canonical 1`] = `
"---
name: claude-rich
description: >-
  Test fixture exercising Claude-only frontmatter and $ARGUMENTS body
  substitution.
---

Fix GitHub issue $ARGUMENTS following the project's coding standards.

1. Read the issue description.
2. Implement the fix.
3. Add tests.
"
`;

exports[`render skill claude-rich → opencode: warnings 1`] = `
[
  {
    "detail": "stripped argument-hint, disable-model-invocation, allowed-tools, disallowed-tools",
    "kind": "claude-only-frontmatter-stripped",
    "target": "opencode",
  },
  {
    "detail": "body uses $ARGUMENTS but no targets.opencode.body override",
    "kind": "claude-only-body-feature",
    "target": "opencode",
  },
]
`;

exports[`render skill claude-rich → opencode: resources 1`] = `[]`;

exports[`render skill claude-rich → codex: canonical 1`] = `
"---
name: claude-rich
description: >-
  Test fixture exercising Claude-only frontmatter and $ARGUMENTS body
  substitution.
---

Fix GitHub issue $ARGUMENTS following the project's coding standards.

1. Read the issue description.
2. Implement the fix.
3. Add tests.
"
`;

exports[`render skill claude-rich → codex: warnings 1`] = `
[
  {
    "detail": "stripped argument-hint, allowed-tools, disallowed-tools",
    "kind": "claude-only-frontmatter-stripped",
    "target": "codex",
  },
  {
    "detail": "body uses $ARGUMENTS but no targets.codex.body override",
    "kind": "claude-only-body-feature",
    "target": "codex",
  },
]
`;

exports[`render skill claude-rich → codex: resources 1`] = `[]`;

exports[`render skill claude-rich → pi: canonical 1`] = `
"---
name: claude-rich
description: >-
  Test fixture exercising Claude-only frontmatter and $ARGUMENTS body
  substitution.
disable-model-invocation: true
allowed-tools: Bash(git *) Read
---

Fix GitHub issue $ARGUMENTS following the project's coding standards.

1. Read the issue description.
2. Implement the fix.
3. Add tests.
"
`;

exports[`render skill claude-rich → pi: warnings 1`] = `
[
  {
    "detail": "stripped argument-hint, disallowed-tools",
    "kind": "claude-only-frontmatter-stripped",
    "target": "pi",
  },
  {
    "detail": "body uses $ARGUMENTS but no targets.pi.body override",
    "kind": "claude-only-body-feature",
    "target": "pi",
  },
]
`;

exports[`render skill claude-rich → pi: resources 1`] = `[]`;

exports[`render skill claude-rich → claude-chat: canonical 1`] = `
"---
name: claude-rich
description: >-
  Test fixture exercising Claude-only frontmatter and $ARGUMENTS body
  substitution.
---

Fix GitHub issue $ARGUMENTS following the project's coding standards.

1. Read the issue description.
2. Implement the fix.
3. Add tests.
"
`;

exports[`render skill claude-rich → claude-chat: warnings 1`] = `
[
  {
    "detail": "stripped argument-hint, disable-model-invocation, allowed-tools, disallowed-tools",
    "kind": "claude-only-frontmatter-stripped",
    "target": "claude-chat",
  },
  {
    "detail": "body uses $ARGUMENTS but no targets.claude-chat.body override",
    "kind": "claude-only-body-feature",
    "target": "claude-chat",
  },
]
`;

exports[`render skill claude-rich → claude-chat: resources 1`] = `[]`;

exports[`render skill with-overrides → claude: canonical 1`] = `
"---
name: with-overrides
description: Test fixture for per-target body and field overrides.
disable-model-invocation: true
allowed-tools: Bash(git *)
---

Fix issue $ARGUMENTS following the project's coding standards.
"
`;

exports[`render skill with-overrides → claude: warnings 1`] = `[]`;

exports[`render skill with-overrides → claude: resources 1`] = `[]`;

exports[`render skill with-overrides → opencode: canonical 1`] = `
"---
name: with-overrides
description: Test fixture for per-target body and field overrides.
---
Pass the issue number as the first argument when invoking this skill,
then summarize and fix it.
"
`;

exports[`render skill with-overrides → opencode: warnings 1`] = `
[
  {
    "detail": "stripped disable-model-invocation, allowed-tools",
    "kind": "claude-only-frontmatter-stripped",
    "target": "opencode",
  },
]
`;

exports[`render skill with-overrides → opencode: resources 1`] = `[]`;

exports[`render skill with-overrides → codex: canonical 1`] = `
"---
name: with-overrides
description: With-overrides skill (Codex variant — Codex-tailored description).
---
For Codex: pass the issue number explicitly, then fix and test.
"
`;

exports[`render skill with-overrides → codex: warnings 1`] = `
[
  {
    "detail": "stripped allowed-tools",
    "kind": "claude-only-frontmatter-stripped",
    "target": "codex",
  },
]
`;

exports[`render skill with-overrides → codex: resources 1`] = `[]`;

exports[`render skill with-overrides → pi: canonical 1`] = `
"---
name: with-overrides
description: Test fixture for per-target body and field overrides.
disable-model-invocation: true
allowed-tools: Bash(git *)
---

Fix issue $ARGUMENTS following the project's coding standards.
"
`;

exports[`render skill with-overrides → pi: warnings 1`] = `
[
  {
    "detail": "body uses $ARGUMENTS but no targets.pi.body override",
    "kind": "claude-only-body-feature",
    "target": "pi",
  },
]
`;

exports[`render skill with-overrides → pi: resources 1`] = `[]`;

exports[`render skill with-overrides → claude-chat: canonical 1`] = `
"---
name: with-overrides
description: Test fixture for per-target body and field overrides.
---

Fix issue $ARGUMENTS following the project's coding standards.
"
`;

exports[`render skill with-overrides → claude-chat: warnings 1`] = `
[
  {
    "detail": "stripped disable-model-invocation, allowed-tools",
    "kind": "claude-only-frontmatter-stripped",
    "target": "claude-chat",
  },
  {
    "detail": "body uses $ARGUMENTS but no targets.claude-chat.body override",
    "kind": "claude-only-body-feature",
    "target": "claude-chat",
  },
]
`;

exports[`render skill with-overrides → claude-chat: resources 1`] = `[]`;

exports[`render skill with-resources → claude: canonical 1`] = `
"---
name: with-resources
description: Test fixture exercising bundled resource subdirectory passthrough.
---

See \`references/api.md\` for protocol details and run \`scripts/run.sh\` to exercise it.
"
`;

exports[`render skill with-resources → claude: warnings 1`] = `[]`;

exports[`render skill with-resources → claude: resources 1`] = `
[
  "references",
  "scripts",
]
`;

exports[`render skill with-resources → opencode: canonical 1`] = `
"---
name: with-resources
description: Test fixture exercising bundled resource subdirectory passthrough.
---

See \`references/api.md\` for protocol details and run \`scripts/run.sh\` to exercise it.
"
`;

exports[`render skill with-resources → opencode: warnings 1`] = `[]`;

exports[`render skill with-resources → opencode: resources 1`] = `
[
  "references",
  "scripts",
]
`;

exports[`render skill with-resources → codex: canonical 1`] = `
"---
name: with-resources
description: Test fixture exercising bundled resource subdirectory passthrough.
---

See \`references/api.md\` for protocol details and run \`scripts/run.sh\` to exercise it.
"
`;

exports[`render skill with-resources → codex: warnings 1`] = `[]`;

exports[`render skill with-resources → codex: resources 1`] = `
[
  "references",
  "scripts",
]
`;

exports[`render skill with-resources → pi: canonical 1`] = `
"---
name: with-resources
description: Test fixture exercising bundled resource subdirectory passthrough.
---

See \`references/api.md\` for protocol details and run \`scripts/run.sh\` to exercise it.
"
`;

exports[`render skill with-resources → pi: warnings 1`] = `[]`;

exports[`render skill with-resources → pi: resources 1`] = `
[
  "references",
  "scripts",
]
`;

exports[`render skill with-resources → claude-chat: canonical 1`] = `
"---
name: with-resources
description: Test fixture exercising bundled resource subdirectory passthrough.
---

See \`references/api.md\` for protocol details and run \`scripts/run.sh\` to exercise it.
"
`;

exports[`render skill with-resources → claude-chat: warnings 1`] = `[]`;

exports[`render skill with-resources → claude-chat: resources 1`] = `
[
  "references",
  "scripts",
]
`;

exports[`render skill common-subset → claude: canonical 1`] = `
"---
name: common-subset
description: Test fixture using only the common-subset frontmatter and a plain body.
---

A short, plain skill body with no Claude-only features.
"
`;

exports[`render skill common-subset → claude: warnings 1`] = `[]`;

exports[`render skill common-subset → claude: resources 1`] = `[]`;

exports[`render skill common-subset → opencode: canonical 1`] = `
"---
name: common-subset
description: Test fixture using only the common-subset frontmatter and a plain body.
---

A short, plain skill body with no Claude-only features.
"
`;

exports[`render skill common-subset → opencode: warnings 1`] = `[]`;

exports[`render skill common-subset → opencode: resources 1`] = `[]`;

exports[`render skill common-subset → codex: canonical 1`] = `
"---
name: common-subset
description: Test fixture using only the common-subset frontmatter and a plain body.
---

A short, plain skill body with no Claude-only features.
"
`;

exports[`render skill common-subset → codex: warnings 1`] = `[]`;

exports[`render skill common-subset → codex: resources 1`] = `[]`;

exports[`render skill common-subset → pi: canonical 1`] = `
"---
name: common-subset
description: Test fixture using only the common-subset frontmatter and a plain body.
---

A short, plain skill body with no Claude-only features.
"
`;

exports[`render skill common-subset → pi: warnings 1`] = `[]`;

exports[`render skill common-subset → pi: resources 1`] = `[]`;

exports[`render skill common-subset → claude-chat: canonical 1`] = `
"---
name: common-subset
description: Test fixture using only the common-subset frontmatter and a plain body.
---

A short, plain skill body with no Claude-only features.
"
`;

exports[`render skill common-subset → claude-chat: warnings 1`] = `[]`;

exports[`render skill common-subset → claude-chat: resources 1`] = `[]`;

exports[`render skill unrecognized-key → claude: canonical 1`] = `
"---
name: unrecognized-key
description: >-
  Test fixture carrying a frontmatter key the canonical schema does not
  enumerate.
---

A plain body. The interesting part is the frontmatter key above: it stands in
for whatever key Claude ships next, before agentforge has learned it.
"
`;

exports[`render skill unrecognized-key → claude: warnings 1`] = `
[
  {
    "detail": "future-claude-key not in the canonical schema; dropped for claude",
    "kind": "unrecognized-frontmatter-key",
    "target": "claude",
  },
]
`;

exports[`render skill unrecognized-key → claude: resources 1`] = `[]`;

exports[`render skill unrecognized-key → opencode: canonical 1`] = `
"---
name: unrecognized-key
description: >-
  Test fixture carrying a frontmatter key the canonical schema does not
  enumerate.
---

A plain body. The interesting part is the frontmatter key above: it stands in
for whatever key Claude ships next, before agentforge has learned it.
"
`;

exports[`render skill unrecognized-key → opencode: warnings 1`] = `
[
  {
    "detail": "future-claude-key not in the canonical schema; dropped for opencode",
    "kind": "unrecognized-frontmatter-key",
    "target": "opencode",
  },
]
`;

exports[`render skill unrecognized-key → opencode: resources 1`] = `[]`;

exports[`render skill unrecognized-key → codex: canonical 1`] = `
"---
name: unrecognized-key
description: >-
  Test fixture carrying a frontmatter key the canonical schema does not
  enumerate.
---

A plain body. The interesting part is the frontmatter key above: it stands in
for whatever key Claude ships next, before agentforge has learned it.
"
`;

exports[`render skill unrecognized-key → codex: warnings 1`] = `
[
  {
    "detail": "future-claude-key not in the canonical schema; dropped for codex",
    "kind": "unrecognized-frontmatter-key",
    "target": "codex",
  },
]
`;

exports[`render skill unrecognized-key → codex: resources 1`] = `[]`;

exports[`render skill unrecognized-key → pi: canonical 1`] = `
"---
name: unrecognized-key
description: >-
  Test fixture carrying a frontmatter key the canonical schema does not
  enumerate.
---

A plain body. The interesting part is the frontmatter key above: it stands in
for whatever key Claude ships next, before agentforge has learned it.
"
`;

exports[`render skill unrecognized-key → pi: warnings 1`] = `
[
  {
    "detail": "future-claude-key not in the canonical schema; dropped for pi",
    "kind": "unrecognized-frontmatter-key",
    "target": "pi",
  },
]
`;

exports[`render skill unrecognized-key → pi: resources 1`] = `[]`;

exports[`render skill unrecognized-key → claude-chat: canonical 1`] = `
"---
name: unrecognized-key
description: >-
  Test fixture carrying a frontmatter key the canonical schema does not
  enumerate.
---

A plain body. The interesting part is the frontmatter key above: it stands in
for whatever key Claude ships next, before agentforge has learned it.
"
`;

exports[`render skill unrecognized-key → claude-chat: warnings 1`] = `
[
  {
    "detail": "future-claude-key not in the canonical schema; dropped for claude-chat",
    "kind": "unrecognized-frontmatter-key",
    "target": "claude-chat",
  },
]
`;

exports[`render skill unrecognized-key → claude-chat: resources 1`] = `[]`;

exports[`render output-style output-style-basic → claude: canonical 1`] = `
"---
name: terse-mentor
description: Terse mentor — brief explanations followed by one targeted question.
---

You are a terse mentor. Keep explanations to two sentences max, then ask a focused follow-up question that probes the user's understanding.
"
`;

exports[`render output-style output-style-basic → claude: warnings 1`] = `[]`;

exports[`render output-style output-style-basic → claude: resources 1`] = `[]`;

exports[`render output-style output-style-rich → claude: canonical 1`] = `
"---
name: code-reviewer
description: Senior reviewer voice — surfaces the highest-priority concern first.
keep-coding-instructions: true
force-for-plugin: false
---

You are reviewing code as a senior engineer. Surface the single highest-priority concern first; queue others. Cite line numbers in \`path:line\` form.
"
`;

exports[`render output-style output-style-rich → claude: warnings 1`] = `[]`;

exports[`render output-style output-style-rich → claude: resources 1`] = `[]`;

exports[`render agent agent-basic → claude: canonical 1`] = `
"---
name: vault-reader
description: Read and summarize the knowledge vault.
model: sonnet
maxTurns: 10
effort: high
tools:
  - Read
  - Grep
---

# Vault reader

Inspect the requested notes and return a concise, cited summary.
"
`;

exports[`render agent agent-basic → claude: warnings 1`] = `[]`;

exports[`render agent agent-basic → claude: resources 1`] = `[]`;

exports[`render agent agent-basic → codex: canonical 1`] = `
"name = "vault-reader"
description = "Read and summarize the knowledge vault."
model_reasoning_effort = "high"
developer_instructions = "# Vault reader\\n\\nInspect the requested notes and return a concise, cited summary."
"
`;

exports[`render agent agent-basic → codex: warnings 1`] = `
[
  {
    "detail": "stripped model, maxTurns, tools",
    "kind": "claude-only-frontmatter-stripped",
    "target": "codex",
  },
]
`;

exports[`render agent agent-basic → codex: resources 1`] = `[]`;

exports[`render agent agent-overrides → claude: canonical 1`] = `
"---
name: claude-reader
description: Read canonical material.
model: haiku
maxTurns: 8
tools: Read
---
# Claude reader

Use Claude's native agent context.
"
`;

exports[`render agent agent-overrides → claude: warnings 1`] = `[]`;

exports[`render agent agent-overrides → claude: resources 1`] = `[]`;

exports[`render agent agent-overrides → codex: canonical 1`] = `
"name = "canonical-reader"
description = "Read canonical material."
developer_instructions = "# Canonical reader\\n\\nUse the shared agent context."
"
`;

exports[`render agent agent-overrides → codex: warnings 1`] = `
[
  {
    "detail": "stripped model, maxTurns, tools",
    "kind": "claude-only-frontmatter-stripped",
    "target": "codex",
  },
]
`;

exports[`render agent agent-overrides → codex: resources 1`] = `[]`;

exports[`render agent agent-codex-escaping → claude: canonical 1`] = `
"---
name: escape-check
description: 'Handles "quotes", backslashes, and triple quotes.'
model: sonnet
effort: high
---

# Escape check

Says "hello" and carries a backslash \\ right here, plus a literal ''' triple
single-quote marker that must never be read as an unterminated string.

Second paragraph after a blank line.
"
`;

exports[`render agent agent-codex-escaping → claude: warnings 1`] = `[]`;

exports[`render agent agent-codex-escaping → claude: resources 1`] = `[]`;

exports[`render agent agent-codex-escaping → codex: canonical 1`] = `
"name = "escape-check"
description = "Handles \\"quotes\\", backslashes, and triple quotes."
model_reasoning_effort = "high"
developer_instructions = "# Escape check\\n\\nSays \\"hello\\" and carries a backslash \\\\ right here, plus a literal ''' triple\\nsingle-quote marker that must never be read as an unterminated string.\\n\\nSecond paragraph after a blank line."
"
`;

exports[`render agent agent-codex-escaping → codex: warnings 1`] = `
[
  {
    "detail": "stripped model",
    "kind": "claude-only-frontmatter-stripped",
    "target": "codex",
  },
]
`;

exports[`render agent agent-codex-escaping → codex: resources 1`] = `[]`;

exports[`render agent agent-codex-model-override → claude: canonical 1`] = `
"---
name: model-override-check
description: Confirms Codex reads model only from its own target override.
model: sonnet
---

# Model override check

Answers questions about explicit per-target model overrides.
"
`;

exports[`render agent agent-codex-model-override → claude: warnings 1`] = `[]`;

exports[`render agent agent-codex-model-override → claude: resources 1`] = `[]`;

exports[`render agent agent-codex-model-override → codex: canonical 1`] = `
"name = "model-override-check"
description = "Confirms Codex reads model only from its own target override."
model = "gpt-5.5"
developer_instructions = "# Model override check\\n\\nAnswers questions about explicit per-target model overrides."
"
`;

exports[`render agent agent-codex-model-override → codex: warnings 1`] = `
[
  {
    "detail": "stripped model",
    "kind": "claude-only-frontmatter-stripped",
    "target": "codex",
  },
]
`;

exports[`render agent agent-codex-model-override → codex: resources 1`] = `[]`;
